[project]
name = "nonebot-plugin-pxchat"
version = "2.0.0"
description = "基于AI大模型的聊天插件，支持多模型切换、上下文记忆、群聊智能参与、短期状态追踪、群成员记忆、图片识别、MCP工具调用、自动禁言等功能"
readme = "README.md"
authors = [{ name = "Srythm", email = "2074447320@qq.com" }]
urls = { Repository = "https://github.com/Srythm/nonebot-plugin-pxchat" }
requires-python = ">=3.10"
dependencies = [
    "nonebot2>=2.4.3,<3.0.0",
    "nonebot-adapter-onebot>=2.4.6,<3.0.0",
    "openai>=2.2.0",
    "mcp>=1.16.0",
    "nonebot-plugin-localstore>=0.7.3",
]

[tool.nonebot]
plugins = ["nonebot_plugin_pxchat"]

[dependency-groups]
dev = [
    "nonebot2[fastapi]>=2.4.3",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
